[tool.poetry]
name = "elements"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10.0"
black = "24.3.0"
pyprojroot = "0.3.0"
pytest = "8.1.1"
typing-extensions = "4.11.0"
pandas = "1.5.0"
numpy = "1.23.3"

[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79