[tool.poetry]
name = "elements"
version = "0.3.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10.0"
pyprojroot = "0.3.0"
pytest = "8.1.1"
typing-extensions = "4.11.0"
pandas = "2.2.2"
numpy = "2.0.1"
matplotlib = "3.6.0"
seaborn = "0.13.2"
scikit-learn = "1.5.1"
ipython = "8.5.0"
black = "24.4.2"

[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79